@@ -1,7 +1,12 @@
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 class A1 {
@@ -54,27 +59,48 @@ class A1 {
 
 public class All {
     public static void main(String[] args) throws Exception {
-        Map<String, List<Integer>> map = new HashMap<>();
-        map.put("Kalia", Collections.emptyList());
+        Map<String, List<String>> map = new HashMap<>();
+        map.put("Kalia", List.of("1", "2", "3", "4", "5"));
+        map.put("Balia", List.of("1", "2", "3", "4", "5"));
+        map.put("content-type", List.of("WRONG"));
+
         map.put("Other", Collections.emptyList());
 
 
+        final HttpHeaders headers = new HttpHeaders();
+
         var kalia = map.entrySet()
                 .stream()
-                .filter(it -> it.getKey().matches("(?i)^kalia"))
+                .filter(it -> it.getKey().matches("(?i).*alia|"))
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+
+        headers.putAll(kalia);
+        headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
+
         System.out.println(kalia);
+        System.out.println(headers);
 
 
         Instant now = Instant.now();
         Instant nullVal = null;
 
-        final Instant instant = Optional.ofNullable(nullVal)
-                .orElse(Instant.MAX)
-//                .orElseThrow(Exception::new)
-                ;
+        final Obj objNull = null;
+        final Obj obj = new Obj();
+        obj.setA("A");
 
-        System.out.println(instant);
+        System.out.println(Optional.ofNullable(obj)
+                .filter(it -> !it.getA().equals("A"))
+                .orElse(new Obj())
+        );
+
+
+//        final Instant instant = Optional.ofNullable(nullVal)
+//                .filter(it -> it != null)
+////                .orElse(Instant.MAX)
+//                .orElseThrow(Exception::new)
+//                ;
+
+//        System.out.println(instant);
 
 
 //        A1 a1 = new A1();
@@ -96,5 +122,37 @@ public class All {
 
 //        String nullStr = null;
 //        nullStr.equals("tratata");
+    }
+}
+
+class Obj {
+    String a;
+    String b;
+
+    public Obj() {
+    }
+
+    public String getA() {
+        return a;
+    }
+
+    @Override
+    public String toString() {
+        return "Obj{" +
+                "a='" + a + '\'' +
+                ", b='" + b + '\'' +
+                '}';
+    }
+
+    public void setA(String a) {
+        this.a = a;
+    }
+
+    public String getB() {
+        return b;
+    }
+
+    public void setB(String b) {
+        this.b = b;
     }
 }
